--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Eagle News"
       content="News Around the world at you fingertips , in the beautiful Snippets"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/newsicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
