--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,6 @@
 
     <!-- for bootstrap  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/1aa2f936c4.js" crossorigin="anonymous"></script>
   </body>
 </html>
